Bug 545268. Decide whether to suppress a mouse event by looking at the suppression state of the document where the event is going to be delivered. r=smaug